# SEE_in_vacuum

./: .gitignore  CMakeLists.txt  MUON_SEY_MONTE_CARLO.md  MUON_SEY_USAGE.md  PLOT_LEGEND_EXPLANATION.md  README.md  TODO.md  calculate_muon_sey.py  draw_histo.C  draw_summary.C  draw_summary_models.C  geometry_analytical.py  geometry_montecarlo.py  geometry_montecarlo_2d.py  init_vis.mac  run.mac  run_toy_events.py  scan.json
config/geant4/: diagnostics_verbose_step_5nm_step0p05_penelope_500eV.json  diagnostics_verbose_step_5nm_step0p1_penelope_500eV.json  diagnostics_verbose_step_5nm_step0p2_penelope_500eV.json  scan.json  scan_al2o3_sey_livermore.json  scan_al2o3_sey_penelope.json  scan_dionne_validation_20nm.json  scan_dionne_validation_5nm.json  scan_dionne_validation_5nm_livermore.json  scan_dionne_validation_5nm_livermore_r1000nm.json  scan_dionne_validation_5nm_r1000nm.json  scan_dionne_validation_5nm_step0p05_livermore.json  scan_dionne_validation_5nm_step0p05_penelope.json  scan_dionne_validation_5nm_step0p1_livermore.json  scan_dionne_validation_5nm_step0p1_penelope.json  scan_edep_depth_5nm_step0p1_penelope.json  scan_edep_depth_5nm_step0p1_penelope_exitdiag.json  scan_edep_depth_5nm_step0p1_penelope_exitdiag_evtlevel.json  scan_edep_depth_5nm_step0p1_penelope_exitdiag_evtlevel_v2.json  scan_muon_4GeV_100k.json  scan_si_fig8_paper_mode_a_sub5000nm_r100000nm.json  scan_si_fig8_paper_mode_b_sub5000nm_r100000nm.json  scan_si_fig8_paper_mode_c_sub5000nm_r100000nm.json
config/geometry/: geometry_config.json
config/toy_model/: toy_model_config.json
data/: fig10_al2o3_5nm_digitized.csv  fig10_al2o3_5nm_digitized_orange.csv
doc/: GEOMETRY_2D_MC.md  MUON_SEY_MONTE_CARLO.md  MUON_SEY_USAGE.md  PLOT_LEGEND_EXPLANATION.md  SEY_DIONNE_VALIDATION.md  SI_FIG8_COMPLIANCE_MATRIX.md  STEP_CONVERGENCE_PROTOCOL.md  e-_SEE_VALIDATION.md  penelope_parameters_current.csv
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
scripts/: build_step_convergence_native_root.py  calculate_muon_sey.py  diagnose_dedx.py  diagnose_edep_depth.py  digitize_fig10_5nm.py  extract_step_convergence_qoi.py  geometry_analytical.py  geometry_montecarlo_2d.py  plot_class_conditioned_comparison.py  plot_delta_theta_2d_correlations.py  plot_delta_theta_diagnostics.py  plot_edep_depth_counts_overlay.py  plot_edep_depth_counts_per_energy.py  plot_edep_depth_overlays.py  plot_edep_step_vs_depth.py  plot_energy_angle_correlation.py  plot_reflected_electron_spectra.py  plot_sampled_primary_trajectories.py  plot_step_angle_correlation.py  plot_transition_diagnostic_distributions.py  plot_transition_diagnostic_step_overlays.py  plot_transition_diagnostics.py  plot_trapped_event_diagnostics.py  probe_si_fig8_runtime_compliance.py  run_draw_all.sh  run_draw_summary.sh  run_draw_summary_models.sh  summarize_reversal_provenance.py  validate_sey_dionne.py
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
